<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/resource_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/resource_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resource_name"
        android:padding="10dp"
        android:text="@string/title_current_value"
        android:textSize="@dimen/text_size_content" />

    <TextView
        android:id="@+id/resource_current_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resource_name"
        android:layout_toRightOf="@id/resource_current"
        android:padding="10dp"
        android:textSize="@dimen/text_size_content" />


    <TextView
        android:id="@+id/resource_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resource_current"
        android:padding="10dp"
        android:text="@string/title_new_value"
        android:textSize="@dimen/text_size_content" />

    <EditText
        android:id="@+id/resource_new_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resource_current_value"
        android:layout_toRightOf="@id/resource_new"
        android:padding="10dp"
        android:hint="@string/hint_input_new_value"
        android:textSize="@dimen/text_size_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/resource_new"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"/>
    </LinearLayout>

</RelativeLayout>
